--- a/views/src/Styles/Dropdown.css
+++ b/views/src/Styles/Dropdown.css
@@ -4,7 +4,7 @@
   width: 200px;
   top: 70px;
   left: 30%;
-  background: rgb(245, 235, 235);
+  background: rgba(0, 0, 0, 0.103);
   text-align: left;
   list-style: none;
   padding: 10px;
