--- a/client/src/Styles/login.css
+++ b/client/src/Styles/login.css
@@ -24,10 +24,10 @@ input {
   width: 60%;
 }
 
-.paragraphforforgotpass {
+#forgotpass {
+  position: absolute;
   color: #7ecb20;
-  text-align: right;
-  margin-right: 60px;
+  right: 4.5rem;
 }
 
 @media only screen and (max-width: 992px) {
@@ -48,9 +48,9 @@ input {
     width: 90%;
   }
 
-  .paragraphforforgotpass {
+  #forgotpass {
+    position: absolute;
     color: #7ecb20;
-    text-align: right;
-    margin-right: 10px;
+    right: 1.5rem;
   }
 }
